--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,21 @@
-.wrapper{
-    width:60em;
+body{
     background-image: url("../images/backgrounds/retina_wood/retina_wood.png ")
+    
+}
+
+.wrapper{
+
 }
 
 #top-bar{
     background-color: #ffffff;
     margin: 0 auto;
     padding: 3em;
+}
+
+.nav{
+    float: right;
+
 }
 
 header{
@@ -19,21 +28,23 @@ header{
 }
 
 #container{
-    clear: both;
+    margin: 0 auto;
     background-color: #ffffff;
-    text-align: center;  
+    width: 60em; 
+    padding: .75em;
+    overflow: auto;
 }
 
-#about-me{
-    float: left;
+/* I want to use the #aboutme tag but for some reason it doesn't change the color of the text unless I use the h2 selector??*/
+h2{
     color: #4aaaa5;
-    
 }
 
-#casual-pic-1{
-    float:left;
+#pic1{
+    clear: both;
+    float: left;
 }
 
-#paragraph1{
+#p1{
     float: left;
 }
