I think this is starting to make more sense

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,46 @@
 body{
-    background-image: url("../images/backgrounds/retina_wood/retina_wood.png ")
-    
+    background-image: url("../images/backgrounds/retina_wood/retina_wood.png ")  
 }
 
-.wrapper{
+.notsureineedthis{
 
 }
 
 #top-bar{
     background-color: #ffffff;
     margin: 0 auto;
-    padding: 3em;
+    padding: 2.5em;
+    clear: both;
+}
+
+#go-here{
+    float: right;
+    clear: both;
 }
 
 .nav{
-    float: right;
-
+    color: #dddddd;
 }
 
 header{
+    clear:both;
     float:left;
     background-color:#4aaaa5;
     margin: 0 auto;
     width: 22em;
     text-align: center;
     color: #ffffff;
+    position: absolute;
+    margin top:
 }
 
-#container{
-    margin: 0 auto;
+#page-contents{
     background-color: #ffffff;
     width: 60em; 
     padding: .75em;
     overflow: auto;
+    border-style: solid;
+    border-width: .0625em;
 }
 
 /* I want to use the #aboutme tag but for some reason it doesn't change the color of the text unless I use the h2 selector??*/
@@ -43,8 +51,8 @@ h2{
 #pic1{
     clear: both;
     float: left;
+    margin-right: 0.75em;
 }
 
 #p1{
-    float: left;
 }
