--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,6 @@ header{
 #box1{
     border-bottom: solid;
     color: #dddddd;
-    padding: .3em;
 }
 
 /* I want to use the #aboutme tag but for some reason it doesn't change the color of the text unless I use the h2 selector??*/
@@ -60,7 +59,8 @@ h2{
 #pic1{
     clear: both;
     float: left;
-    margin-right: 0.75em;
+    margin-right: 1em;
+    margin-top: 1em;
 }
 
 #p1{
