--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 body{
     background-image: url("../images/backgrounds/retina_wood/retina_wood.png ");
-    margin: 0 auto;
 }
 
 .not-sure-i-need-this{
@@ -9,34 +8,44 @@ body{
 
 #top-bar{
     background-color: #ffffff;
-    padding: 2.5em;
-    padding-bottom: 1.4em;
     border-bottom: solid;
     border-bottom-width: 0.0625em;
-}
-
-#go-here{
+    border-color: #808080;
+    overflow: auto;
     position: relative;
-    left: 67.5em;
-    clear: both;
 }
 
 .nav{
-    color: #dddddd;
+    float: right;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    color: #0cb9e8;
+    margin-bottom: 2.33em;
+    margin-right: 22em; 
 }
 
-header{
+.nav li{
+    font-size: 1.2em;
+    list-style: none;
+    display: inline-block;
+    color: #0cb9e8;
+}
+
+.nav a{
+    color: #0cb9e8
+}
+
+
+
+h1{
     float:left;
-    position: relative;
-    margin: 0 auto;
-    top: -3.595em;
-    left: 17em;
-    padding: 0.38em;
+    padding: 1em;
     background-color:#4aaaa5;
-    width: 22em;
+    font-size: 2em;
     text-align: center;
     color: #ffffff;
-    clear: both;
+    margin-left: 10.8em;
 }
 
 #page-contents{
@@ -44,31 +53,44 @@ header{
     margin: auto;
     margin-top: 2em;
     width: 60em; 
-    padding: .75em;
+    padding: 1em;
     border-style: solid;
     border-width: .0625em;
+    border-color: #666666;
+    clear: both;
 }
 
 #box1{
     border-bottom: solid;
-    color: #dddddd;
+    color: #cccccc;
 }
 
 /* I want to use the #aboutme tag but for some reason it doesn't change the color of the text unless I use the h2 selector??*/
 h2{
     color: #4aaaa5;
+    font-size: 2em;
+    margin-bottom: 0.75em;
 }
 
 #pic1{
-    clear: both;
     float: left;
     margin-right: 1em;
     margin-top: 1em;
 }
 
 #p1{
+    margin-top: 1em;
 }
 
 footer{
-    clear:both;
+    font-size: x-small;
+    position: relative;
+    top: 12.9em;
+    border-top: solid;
+    border-top-width: thick;
+    border-color: #808080;
+    text-align: center;
+    color: #ffffff;
+    background-color: #0cb9e8;
+    padding: 2em;
 }
