--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,7 @@ footer{
     color: #ffffff;
     background-color: #0cb9e8;
     padding: 2em;
+    padding-top:3em;
     /* I want this position to be fixed but it turns into a tiny box instead of being a long line */
     position: relative;
     bottom: 0;
