--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ body{
     list-style: none;
     display: inline-block;
     color: #0cb9e8;
+    font-family: Georgia, 'Times New Roman', Times, serif; 
 }
 
 .directory a{
@@ -42,6 +43,7 @@ h1{
     padding: 1em;
     background-color:#4aaaa5;
     font-size: 2em;
+    font-family: Georgia, 'Times New Roman', Times, serif; 
     text-align: center;
     color: #ffffff;
 }
@@ -107,4 +109,27 @@ footer{
     border-style: solid;
     border-width: .0625em;
     border-color: #666666;
+}
+
+#form-1{
+    margin-top: 2em;
+}
+
+form p{
+    text: 1em
+}
+
+.text-box {
+    width: 100%;
+    padding: 0.75em 0em;
+}
+    #message-box{
+    height: 12.5em;
+    }
+
+#submit{
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding: 0.5em 1em;
+
 }
