--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,7 @@ footer{
     border-style: solid;
     border-width: .0625em;
     border-color: #666666;
+    overflow: auto;
 }
 
 #form-1{
@@ -131,5 +132,34 @@ form p{
     background-color: #4aaaa5;
     color: #ffffff;
     padding: 0.5em 1em;
-
 }
+
+/* this is my CSS for the portfolio page */
+
+.label{
+    position: relative;
+    size: 1em;
+    color: #ffffff;
+    background-color: #4aaaa5;
+    text-align: center;
+    padding: 1em;
+    width: 93%;
+    bottom: 6em;
+}
+
+.thumbnail{
+    float: left;
+    position: relative;
+    width: 12.5em;
+    margin: 2.5em;
+}
+
+.gallery-image{
+    z-index:-1;
+}
+
+/* .thumbnail:nth-child(even) {
+    margin-right: 40px;
+  } */
+
+
