--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,23 +136,24 @@ form p{
 
 /* this is my CSS for the portfolio page */
 
+/*this is the labels of the pictures*/
 .label{
     position: relative;
-    size: 1em;
+    size: 1.5em;
     color: #ffffff;
     background-color: #4aaaa5;
     text-align: center;
     padding: 1em;
-    width: 93%;
+    width: 100%;
     bottom: 6em;
 }
-
+/* this is my container class for the image and the text divs  */
 .thumbnail{
     float: left;
     position: relative;
-    width: 12.5em;
     margin: 2.5em;
 }
+
 
 .gallery-image{
     z-index:-1;
