--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ footer{
 
 /* this is the CSS for the contact section */
 
-#contact-contents{
+#contact-box{
     background-color: #ffffff;
     margin: auto;
     margin-top: 2em;
@@ -124,7 +124,9 @@ footer{
 }
 
 form p{
-    text: 1em
+    text: 1em;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #666666;
 }
 
 .text-box {
@@ -138,7 +140,16 @@ form p{
 #submit{
     background-color: #4aaaa5;
     color: #ffffff;
-    padding: 0.5em 1em;
+    padding: 0.5em 2em;
+    font-size: 1.1em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#submit:hover{
+    background-color: #0cb9e8;
+}
+#submit:active{
+    background-color: #2d6e7f;
 }
 
 /* this is my CSS for the portfolio page */
