--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,29 +154,44 @@ form p{
 
 /* this is my CSS for the portfolio page */
 
+#thumbnail-box{
+    background-color: #ffffff;
+    margin: auto;
+    margin-top: 2em;
+    width: 58em; 
+    padding: 1em;
+    border-style: solid;
+    border-width: .0625em;
+    border-color: #666666;
+    overflow: auto;
+}
+
 /*this is the labels of the pictures*/
 .label{
     position: relative;
-    size: 1.5em;
+    font-size: 1.5em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: #ffffff;
     background-color: #4aaaa5;
     text-align: center;
-    padding: 1em;
+    padding: 0.8em 0em;
     width: 100%;
-    bottom: 6em;
+    bottom: 0.5em;
 }
 /* this is my container class for the image and the text divs  */
 .thumbnail{
     float: left;
     position: relative;
-    margin: 2.5em;
+    margin: 3em 4em 0.5em 0em;
+    border-style: solid;
+    border-width: .0625em;
+    border-color: #666666;
 }
-
 
 .gallery-image{
     z-index:-1;
 }
-
+/* tutor gave me this to try but I don't really understant it so I left it out */
 /* .thumbnail:nth-child(even) {
     margin-right: 40px;
   } */
