--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,15 +27,21 @@ body{
     font-size: 1.2em;
     list-style: none;
     display: inline-block;
-    color: #0cb9e8;
+    color: #b8ffff;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0em 0.5em 0em;
 }
 /* styles the a property inside the directory class */
 .directory a{
-    color: #0cb9e8
+    color: #0cb9e8;
+    font-size: 0.8em;
+    cursor: pointer;
 }
 
-
+.directory a:hover{
+    color: #b419ad;
+    font-size: 1.2em;
+}
 
 h1{
     /* margin: 0 auto; */
@@ -132,8 +138,9 @@ form p{
 .text-box {
     width: 100%;
     padding: 0.75em 0em;
+
 }
-    #message-box{
+#message-box{
     height: 12.5em;
     }
 
@@ -143,6 +150,7 @@ form p{
     padding: 0.5em 2em;
     font-size: 1.1em;
     font-family: Arial, Helvetica, sans-serif;
+    cursor: pointer;
 }
 
 #submit:hover{
